Optimize strategic endpoint queries